--- a/login.html
+++ b/login.html
@@ -1,1 +1,36 @@
-fddd
+<!doctype html>
+<html>
+    <head>
+        <title>SM Login Page</title>
+        <style>
+            .section {
+                width : 100%;
+            }
+            .idpw {
+                margin-left : 30px;
+            }
+            .title {
+                height: 70px;
+                align-items: center;
+                margin-left : 20px;
+                margin-right : 800px;
+                font-weight: bold;
+                line-height: 67px;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <h3 style="text-align : center;border-bottom : 10px solid #3366DD;">로그인</h3>
+        </div>
+        
+        <div class="section">
+            <form>
+                ID : <input type = "text" name="logID"/>
+            </form>
+            <form>
+                PW : <input type = "text" name="logPW"/>
+            </form>
+        </div>
+    </body>
+</html>
