--- a/SportMarketing.html
+++ b/SportMarketing.html
@@ -33,6 +33,8 @@
             font-size: 3rem;
             font-weight: bold;
             margin: 35px;
+            color: white;
+            background-color: black;
         }
 
         .subtitle {
@@ -139,9 +141,6 @@
 <body>
     <div class="nav">
         <div class="nav-title"> 우리동네스포츠 </div>
-        <div class="nav-right-items">
-            <div class="nav-item">메뉴1</div>
-        </div>
     </div>
 
     <div class="main">
@@ -162,11 +161,11 @@
                     </strong>
                 </div>
                 <div class="rlogo">
-                    <img src="./img/nikelogo.jpeg" height="300" width="400" alt="Nike">
+                    <img src="./img/nikelogo.jpeg" height="300" width="380" alt="Nike">
                 </div>
 
-                <div class="rtext site01"> 사이트 한줄 소개</div>
-                <div class="rtext2"> 사이트 장점1 </div>
+                <div class="rtext site01"> Just Do It. </div>
+                <div class="rtext2"> 스포츠용품 1위 </div>
                 <div class="rtext3">
                     <span>바로가기</span>
                 </div>
@@ -181,11 +180,11 @@
                         </strong>
                     </div>
                     <div class="rlogo">
-                        <img src="./img/adidaslogo.jpeg" height="300" width="400" alt="adidas">
+                        <img src="./img/adidaslogo.png" height="300" width="350" alt="adidas">
                     </div>
 
-                    <div class="rtext site01"> 사이트 한줄 소개</div>
-                    <div class="rtext2"> 사이트 장점1 </div>
+                    <div class="rtext site01"> Impossibe is Nothiong</div>
+                    <div class="rtext2"> 사이트 장점 </div>
                     <div class="rtext3">
                         <span>바로가기</span>
                     </div>
@@ -200,11 +199,11 @@
                             </strong>
                         </div>
                         <div class="rlogo">
-                            <img src="./img/logotest.png" height="300" width="400" alt="underarmour">
+                            <img src="./img/underarmour.jpeg" height="300" width="350" alt="underarmour">
                         </div>
 
-                        <div class="rtext site01"> 사이트 한줄 소개</div>
-                        <div class="rtext2"> 사이트 장점1 </div>
+                        <div class="rtext site01"> 3대500이하 금지</div>
+                        <div class="rtext2"> 사이트 장점 </div>
                         <div class="rtext3">
                             <span>바로가기</span>
                         </div>
