--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="signupform-group">
                     <label class="signuplabel">이름</label>
-                    <input type="text" name="userid" id="userid" class="forminfo" placeholder="이름">
+                    <input type="text" name="username" id="username" class="forminfo" placeholder="이름">
                 </div>
                 <div class="signupform-group">
                     <label class="signuplabel">아이디</label>
@@ -32,20 +32,30 @@
                 </div>
                 <div class="signupform-group">
                     <label class="signuplabel">패스워드</label>
-                    <input type="text" name="userid" id="userid" class="forminfo" placeholder="패스워드">
+                    <input type="password" name="userpw" id="userpw" class="forminfo" placeholder="패스워드">
                 </div>
                 <div class="signupform-group">
                     <label class="signuplabel">패스워드 확인</label>
-                    <input type="text" name="userid" id="userid" class="forminfo" placeholder="패스워드 확인">
+                    <input type="password" name="userpwcheck" id="userpwcheck" class="forminfo" placeholder="패스워드 확인">
+                </div>
+                <div class="signupform-group">
+                    <label class="signuplabel">주소</label>
+                    <input type="text" name="useraddress" id="useraddress" class="forminfo" placeholder="주소">
                 </div>
             </div>
         </div>
         <div class="panel-btn">
             <div class="row">
-                <button class="signupbtn" id="loginbtn">다음</button>
+                <button class="signupbtn" id="loginbtn" onclick="trySignup()">다음</button>
             </div>            
         </div>
     </div>
 
 
 </body>
+
+<script>
+    function trySignup(){
+        window.location.href="signupcomplete.html"
+    }
+</script>
