--- a/login.html
+++ b/login.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+
+    <div id='title_area'>
+        <a href='SportsMatching.html' class='content_text' id='title_text'>Sports Matching</a>
+    </div>
+
+
     <div class="logform">
         <div class="panel-heading">
             <div class="row">
