--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div id='title_area'>
+        <a href='SportsMatching.html' class='content_text' id='title_text'>Sports Matching</a>
+    </div>
+
+
     <div class="signupform">
         <div class="panel-heading">
             <div class="row">
@@ -46,7 +51,7 @@
         </div>
         <div class="panel-btn">
             <div class="row">
-                <button class="signupbtn" id="loginbtn" onclick="trySignup()">다음</button>
+                <button class="signupbtn" id="signupbtn" onclick="trySignup()">다음</button>
             </div>            
         </div>
     </div>
