--- a/signupcomplete.html
+++ b/signupcomplete.html
@@ -10,10 +10,10 @@
 
 <body>
      <div id='title_area'>
-          <a href='SportsMatching.html' class='content_text' id='title_text'>Sports Matching</a>
+          <a href='login.html' class='content_text' id='title_text'>Sports Matching</a>
 
           <div id='login_status'>
-               <a class='menu_button content_text'>로그인</a>
+               <a href='login.html' class='menu_button content_text'>로그인</a>
           </div>
       </div>
 
