--- a/SportsMatching.html
+++ b/SportsMatching.html
@@ -43,9 +43,9 @@ body {
 .content_title_text {
 	font-size: 48px;
 	font-weight: bold;
-	margin-bottom: 60px;
 	text-align: center;
-	margin-top: 40px;
+	margin: 40px 0 60px 10px;
+	display: inline-block;
 }
 .content_desc_text {
 	font-size: 42px;
@@ -138,6 +138,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 </div>
 
 <div id='content_area'>
+	<div class='content_image' style='width: 60px; height: 60px; background-image:url(./images/note_img.png); display: inline-block;'></div>
 	<div class='content_text content_title_text'>운동 매칭하기</div>
 	<div class='content_line' style='border-top: 3px solid #999999;'></div>
 	<div class='content_box'>
