--- a/SportsMatching_My.html
+++ b/SportsMatching_My.html
@@ -43,9 +43,9 @@ body {
 .content_title_text {
 	font-size: 48px;
 	font-weight: bold;
-	margin-bottom: 60px;
 	text-align: center;
-	margin-top: 40px;
+	margin: 40px 0 0px 10px;
+	display: inline-block;
 }
 .content_desc_text {
 	font-size: 30px;
@@ -142,7 +142,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 </div>
 
 <div id='content_area'>
-	<div class='content_text content_title_text'>나의 매칭현황</div>
+	<div class='content_image' style='width: 60px; height: 60px; background-image:url(./images/time_img.png); display: inline-block;'></div>
+	<div class='content_text content_title_text'>매칭현황</div>
 	<div class='item_box'>
 		<div class='content_box'>
 			<div class='content_image' style='background-image:url(./images/kind_img.png);'></div>
