--- a/SportMarketing.html
+++ b/SportMarketing.html
@@ -7,6 +7,11 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
+        .body {
+            margin: 0 0 0 0;
+            font-family: Arial;
+        }
+
         .nav {
             height: 125px;
             width: 800px;
