--- a/SportMarketing.html
+++ b/SportMarketing.html
@@ -7,7 +7,7 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
-        .body {
+        body {
             margin: 0 0 0 0;
             font-family: Arial;
         }
