--- a/SportMarketing.html
+++ b/SportMarketing.html
@@ -199,7 +199,7 @@
                 </strong>
             </div>
             <div class="rlogo">
-                <img src="./img/nikelogo.jpeg" height="300" width="250" alt="Nike">
+                <img src="./images/nikelogo.jpeg" height="300" width="250" alt="Nike">
             </div>
 
             <div class="rtext site01"> Just Do It. </div>
@@ -220,7 +220,7 @@
                     </strong>
                 </div>
                 <div class="rlogo">
-                    <img src="./img/adidaslogo.png" height="300" width="250" alt="adidas">
+                    <img src="./images/adidaslogo.png" height="300" width="250" alt="adidas">
                 </div>
 
                 <div class="rtext site01"> Impossibe is Nothiong</div>
@@ -239,7 +239,7 @@
                         </strong>
                     </div>
                     <div class="rlogo">
-                        <img src="./img/underarmour.jpeg" height="300" width="250" alt="underarmour">
+                        <img src="./images/underarmour.jpeg" height="300" width="250" alt="underarmour">
                     </div>
 
                     <div class="rtext site01"> 3대500이하 금지</div>
@@ -257,7 +257,7 @@
                             </strong>
                         </div>
                         <div class="rlogo">
-                            <img src="./img/crazy11logo.jpng.png" height="300" width="250" alt="crazy11">
+                            <img src="./images/crazy11logo.jpng.png" height="300" width="250" alt="crazy11">
                         </div>
                         <div class="rtext site01"> Crazy11 </div>
                         <div class="rtext2"> 축구화 16년 연속 판매 1위 </div>
@@ -275,7 +275,7 @@
                                 </strong>
                             </div>
                             <div class="rlogo">
-                                <img src="./img/jujulogo.png" height="300" width="250" alt="juju">
+                                <img src="./images/jujulogo.png" height="300" width="250" alt="juju">
                             </div>
 
                             <div class="rtext site01"> 주주스포츠</div>
@@ -294,7 +294,7 @@
                                     </strong>
                                 </div>
                                 <div class="rlogo">
-                                    <img src="./img/ssakalogo.png" height="300" width="250" alt="ssaka">
+                                    <img src="./images/ssakalogo.png" height="300" width="250" alt="ssaka">
                                 </div>
 
                                 <div class="rtext site01"> 싸카닷컴</div>
