--- a/SportsMatching/src/main/webapp/SportsMatching_My.html
+++ b/SportsMatching/src/main/webapp/SportsMatching_My.html
@@ -126,7 +126,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 </style>
 
 <head>
-<meta name='viewport' content='user-scalable=0'>
+<meta charset='utf-8' name='viewport' content='user-scalable=0'>
 <title>Sports Matching - </title>
 </head>
 
@@ -290,5 +290,44 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 </div>
 
 </body>
+
+<script src='./js/jquery-3.6.1.min.js'></script>
+<script>
+
+
+function matching ()
+{
+	var owner = "대충왕멋진닉네임"
+	var kind = kind_input.value;
+	var date = date_input.value;
+	var time1 = time_input1.value;
+	var time2 = time_input2.value;
+	var mmr1 = mmr_input1.value;
+	var mmr2 = mmr_input2.value;
+	var many1 = many_input1.value;
+	var many2 = many_input2.value;
+	var our = our_input.value;
+	
+    $.ajax ( {
+        url: "./matching_my.jsp",
+        method: "POST",
+        data: { owner: owner },
+        dataType: "text",
+        success: (data) => {
+        	if (data.trim() == "성공")
+        	{
+        		
+        	}
+        	else
+        	{
+        		alert("서비스 접속에 실패했습니다.");
+        	}
+        },
+        error: () => {
+        	
+        }
+    })
+}
+</script>
 
 </html>
