어제 오늘 작업한거입니다.

--- a/SportsMatching/src/main/webapp/SportsMatching.html
+++ b/SportsMatching/src/main/webapp/SportsMatching.html
@@ -203,7 +203,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 
 function matching ()
 {
-	var owner = "대충왕멋진닉네임"
+	var owner = "대충왕멋진닉네임";
 	var kind = kind_input.value;
 	var date = date_input.value;
 	var time1 = time_input1.value;
