--- a/SportsMatching/src/main/webapp/signup.html
+++ b/SportsMatching/src/main/webapp/signup.html
@@ -60,7 +60,9 @@
 </body>
 
 <script>
+
     function trySignup(){
-    	 window.location.href="signupcomplete.html"
+    	var 
+    	window.location.href="signupcomplete.html"
     }
 </script>
