--- a/SportsMatching/src/main/webapp/signup.html
+++ b/SportsMatching/src/main/webapp/signup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <head>
     <title>SM SINGUP PAGE</title>
     <meta name=viewport charset='utf-8' content="width=device-width, initial-scale=1, user-scalable=0">
@@ -90,3 +90,4 @@
         })
     }
 </script>
+</html>
