--- a/SportsMatching/src/main/webapp/SportsMatching_List.html
+++ b/SportsMatching/src/main/webapp/SportsMatching_List.html
@@ -133,7 +133,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 <body>
 
 <div id='title_area'>
-	<a href='SportsMatching.html' class='menu_text' id='title_text'>Sports Matching</a>
+	<a href='./MAIN.html' class='menu_text' id='title_text'>Sports Matching</a>
 	
 	<!--DEFAULT NO LOGIN STATE-->
 	<div id='login_status'>
