오늘 작업한거

--- a/SportsMatching/src/main/webapp/SportsMatching.html
+++ b/SportsMatching/src/main/webapp/SportsMatching.html
@@ -235,6 +235,7 @@ function matching()
         	if (data.trim() == "성공")
         	{
         		alert("매칭 등록에 성공했습니다.");
+        		window.location = "./SportsMatching_My.html";
         	}
         	else
         	{
