--- a/SportsMatching/src/main/webapp/login.html
+++ b/SportsMatching/src/main/webapp/login.html
@@ -38,7 +38,7 @@
         </div>
         <div class="panel-btn">
             <div class="row">
-                <button class="loginbtn" id="loginbtn">로그인</button>
+                <button class="loginbtn" id="loginbtn" onclick="tryLogin">로그인</button>
             </div>            
         </div>
     </div>
@@ -56,15 +56,31 @@
 </body>
 
 <script>
-	
-	$('#loginbtn').click(function(){
-		var userid = $("#userid").val();
-		var userpw = $("#userpw").val();
-				
-		$.ajax ({
-			type : "post",
-			url : "./login_request.jsp",
-			
-		})
-	})
+function tryLogin(){
+    	var id = userid.value;
+    	var pw = userpw.value;
+    	    		
+        $.ajax ( {
+            url: "./login_request.jsp",
+            method: "POST",
+            data: {id : id, pw : pw},
+            dataType: "text",
+            success: (data) => {
+            	if (data.trim() == "로그인성공")
+            	{
+            	  window.location.href="MAIN.html"
+            	}
+            	else if(data.trim() == "로그인실패"){
+            		alert("로그인 정보가 틀립니다.");
+            	}
+            	else
+            	{
+            		alert("서비스 접속에 실패했습니다.");
+            	}
+            },
+            error: () => {
+            	alert("네트워크 연결을 확인해주세")
+            }
+        })
+    }
 </script>
