채팅 html 손 못보겠어요

--- a/SportsMatching/src/main/webapp/chating.html
+++ b/SportsMatching/src/main/webapp/chating.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title></title>
+  <title>Sports Matching - </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <style>
-    body{
+body {
     margin: 0;
     background:#f5f5f5;
 }
@@ -447,6 +447,7 @@ a.guest-on i {
                     <i class="fa fa-comments-o"></i>
                     <h5>채팅창</h5>
                 </div>
+                <!--
                 <ul class="chat-list">
                     <li class="">
                         <a class="lobby" href="#lobby.html">
@@ -486,6 +487,7 @@ a.guest-on i {
                         </a>
                     </li>
                 </ul>
+                -->
                 <ul class="chat-list">
                   <li class="">
                         <a class="lobby" href="#lobby.html">
