--- a/SportsMatching/src/main/webapp/MyPage.html
+++ b/SportsMatching/src/main/webapp/MyPage.html
@@ -62,3 +62,27 @@
             
 
 </body>
+<script src='./js/jquery-3.6.1.min.js'></script>
+<script>
+function Withdrawal(){
+	//내 예상대로라면 헤더에서 정보가 계속 남아있어서 이걸로 id를 땡겨
+	var ssid = sessionStorage.getItem("id");
+	
+	$.ajax ({
+		url : "./Withdrawal.jsp",
+		method : "POST",
+		data : { id : ssid },
+        dataType : "text",
+        success: (data) => {
+        	if(data.trim() == "성공"){
+        		alert("회원 탈퇴 성공");
+        	    sessionStorage.clear();
+        	    window.location.href = "MAIN.html"
+            }
+            else{
+        	    alert("회원 탈퇴 실패");
+            }
+        }
+    })
+}
+</script>
