--- a/SportsMatching/src/main/webapp/login.html
+++ b/SportsMatching/src/main/webapp/login.html
@@ -59,6 +59,8 @@
 function tryLogin(){
     	var id = userid.value;
     	var pw = userpw.value;
+    	
+    	sessionStorage.setItem("id", id);
     	    		
         $.ajax ( {
             url: "./login_request.jsp",
@@ -67,8 +69,8 @@ function tryLogin(){
             dataType: "text",
             success: (data) => {
             	if (data.trim() == "로그인성공")
-            	{
-            		alert("로그인 성공!");
+            	{            	  
+            	  alert("로그인 성공!");
             	  window.location.href="MAIN.html"
             	}
             	else if(data.trim() == "로그인실패"){
